--- a/active.products/src/main/resources/application.properties
+++ b/active.products/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=9000
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=activeProducts
+spring.data.mongodb.database=activos
 #spring.data.mongodb.username=admin
 #spring.data.mongodb.password=password
