initial configuration start init

--- a/active.products/src/main/resources/application.properties
+++ b/active.products/src/main/resources/application.properties
@@ -1,6 +1,5 @@
+server.port=9096
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=mongodb+srv://grupo1:2FwOcIp87ocjmlw6@clusterarqui.9co6dxm.mongodb.net/DB_ACTIVOS?retryWrites=true&w=majority
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=activos
-#spring.data.mongodb.username=admin
-#spring.data.mongodb.password=password
+
